add box1: flex 布局有什么好处

--- a/_posts/css相关内容/2021-06-26-flex布局.md
+++ b/_posts/css相关内容/2021-06-26-flex布局.md
@@ -12,8 +12,24 @@ tags:
 typora-root-url: ..
 ---
 
-
 # flex布局
+
+总结：
+
+- 主要优势：
+    - 便捷的元素排列：水平/垂直/水平反转序列/垂直反转序列 flex-direction
+    - 空间分配：flex-grow、flex-shink、flex-basis + 处理空白空间：justify-content 定义主轴对齐方式
+    - 响应式布局：自适应调整、元素顺序调整 order 
+- flex 经常被遗忘的默认属性：
+    - 主轴：默认不拉伸，但默认缩小 
+    - 交叉轴：默认拉伸，align-items 默认 stretch
+    - flex-basis：auto 代表取元素内容尺寸；0 代表不考虑当前内容尺寸，整体考虑，可能会挤压到内容
+    - flex-grow：正整数即以 flex-basis 为基础，在主轴增加占用可用空间
+    - space-between - 元素排列后，将剩余空间分配到元素之间[a----b----c] space-around - 使每个元素左右空间相等 [--a----b----c--]
+    - flex 会导致 float、clear、vertical-align 失效
+    - align-self：允许单个项目与其他不一样的对齐方式，可覆盖 align-items 属性
+
+
 
 每次看 flex 相关的问题，我都会翻阅 阮一峰大大的博客：
 
