--- a/_posts/2024-12-26-项目进展.md
+++ b/_posts/2024-12-26-项目进展.md
@@ -167,3 +167,12 @@ sudo docker run -d -p 3000:3000 next_pro
 http://121.43.164.209:3000
 
 http://codingwithalice.top:3000/
+
+##### 2025.2.13 进展
+
+- Next_Pro 在服务器部署 mysql，修改代码根据环境适配
+
+##### 2025.2.14 进展
+
+- Next_Pro 修改手机端样式
+
