add box1: babel 作用+原理+补丁

--- a/_posts/工程化/2021-07-20-babel 作用+原理+补丁.md
+++ b/_posts/工程化/2021-07-20-babel 作用+原理+补丁.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:     babel深入
+title:     babel 作用+原理+补丁
 subtitle:  
 date:       2021-07-20
 author:     
@@ -12,7 +12,16 @@ typora-root-url: ..
 
 ---
 
-# babel深入
+# babel 作用+原理+补丁
+
+总结：
+
+-	作用：已知 `babel` 用于将 es6 语法转换成浏览器普遍支持的 es5 语法，使开发能够使用便捷的 es6 进行开发
+-	工作原理：先将 ES6 源码转换为 AST，然后再将 ES6 语法的 AST 转换为 ES5 语法的 AST，最后利用 ES5 的 AST 生成 JavaScript 源代码
+    -	解析（Parsing-@babel/parser）：词法分析+语法分析得到 AST
+    -	转换（Transformation-@babel-traverse）：遍历 AST 并转换（ES6的AST -> ES5的AST）
+    -	生成（Code Generation-@babel-generator）：根据转换后的 AST 转换成 js 代码
+-	Polyfill：但是babel只对es6语法进行转换，比如将箭头函数编译成函数形式，但是 **不会增加或修改原有的属性和方法**，比如 `Iterator`、`Generator`、`Set`、`Maps`、`Proxy`、`Reflect`、`Symbol`、`Promise` 等全局对象，以及一些定义在全局对象上的方法（比如 `Object.assign`）都不会转码。如果要在低版本的浏览器中执行es6的方法，就需要 **对ES6函数进行补充**，安装并在页面引入 `@babel/polyfill`
 
 参考文章：[一口(很长的)气了解 babel](https://juejin.cn/post/6844903743121522701)、[深入Babel，这一篇就够了](https://juejin.cn/post/6844903746804137991) 
 
