add box1: HTTP/3.0 的改进的点

--- a/_posts/工程化/2021-07-20-babel 作用+原理+补丁.md
+++ b/_posts/工程化/2021-07-20-babel 作用+原理+补丁.md
@@ -19,8 +19,8 @@ typora-root-url: ..
 -	作用：已知 `babel` 用于将 es6 语法转换成浏览器普遍支持的 es5 语法，使开发能够使用便捷的 es6 进行开发
 -	工作原理：先将 ES6 源码转换为 AST，然后再将 ES6 语法的 AST 转换为 ES5 语法的 AST，最后利用 ES5 的 AST 生成 JavaScript 源代码
     -	解析（Parsing-@babel/parser）：词法分析+语法分析得到 AST
-    -	转换（Transformation-@babel-traverse）：遍历 AST 并转换（ES6的AST -> ES5的AST）
-    -	生成（Code Generation-@babel-generator）：根据转换后的 AST 转换成 js 代码
+    -	转换（Transformation-@babel/traverse）：遍历 AST 并转换（ES6的AST -> ES5的AST）
+    -	生成（Code Generation-@babel/generator）：根据转换后的 AST 转换成 js 代码
 -	Polyfill：但是babel只对es6语法进行转换，比如将箭头函数编译成函数形式，但是 **不会增加或修改原有的属性和方法**，比如 `Iterator`、`Generator`、`Set`、`Maps`、`Proxy`、`Reflect`、`Symbol`、`Promise` 等全局对象，以及一些定义在全局对象上的方法（比如 `Object.assign`）都不会转码。如果要在低版本的浏览器中执行es6的方法，就需要 **对ES6函数进行补充**，安装并在页面引入 `@babel/polyfill`
 
 参考文章：[一口(很长的)气了解 babel](https://juejin.cn/post/6844903743121522701)、[深入Babel，这一篇就够了](https://juejin.cn/post/6844903746804137991) 
@@ -33,13 +33,13 @@ typora-root-url: ..
 
         通过 `babyIon`（7.x改名为@babel/parser）实现：先 **词法分析** 把字符串形式的代码解析为 **令牌tokens 流** （类似 AST 中节点），再 **语法分析** 把令牌流转换成 AST
 
-    - **转换 @babel-traverse**
+    - **转换 @babel/traverse**
 
-        接收到 AST 并通过 `@babel-traverse` （维护了 AST 的状态，定义了节点的增删改方法）进行深度优先遍历
+        接收到 AST 并通过 `@babel/traverse` （维护了 AST 的状态，定义了节点的增删改方法）进行深度优先遍历
 
-    - **生成 @babel-generator**
+    - **生成 @babel/generator**
 
-        将 AST 通过 `@babel-generator` 进行深度优先遍历，构建字符串，转换成 js 代码
+        将 AST 通过 `@babel/generator` 进行深度优先遍历，构建字符串，转换成 js 代码
         
         <img src="/../img/assets_2019/bVbDNYp.png" alt="1.jpg" style="zoom:60%;" />
 
