add box1: nextTick 原理，在Vue2、Vue3中分别是什么步骤实现的，简单模拟实现流程

--- a/_posts/vue相关内容/2018-04-15-样式 + nextTick.md
+++ b/_posts/vue相关内容/2018-04-15-样式 + nextTick.md
@@ -63,8 +63,7 @@ this.$nextTick([callback,context])
 **ref 需要在Dom渲染完成后才会有**，在使用的时候确保Dom已经渲染完成；
 
 ```js
-// 修改数据 
-vm.msg = 'Hello' 
+vm.msg = 'Hello'  // 修改数据 
 // DOM 还没有更新 
 Vue.nextTick(function () { 
 	// DOM 更新了 
