--- a/_posts/vue相关内容/2020-03-25-ref和$refs的使用.md
+++ b/_posts/vue相关内容/2020-03-25-ref和$refs的使用.md
@@ -33,62 +33,59 @@ typora-root-url: ..
 - 注意：**ref 需要在Dom渲染完成后才会有，在使用的时候确保Dom已经渲染完成**。比如在生命周期 `mounted`钩子中调用，或者在 `this.$nextTick(()=>{}) `中调用。
 
   ```html
-          <div 
-              ref='hello' 
-              @click='handleDivClick'
-          >
-              hello world
-          </div>
+  <div ref='hello' @click='handleDivClick'>
+      hello world
+  </div>
   ```
-
+  
   ```javascript
-          var vm = new Vue({
-              el: '#root',
-              methods: {
-                  handleDivClick: function () {
-                      alert(this.$refs.hello.innerHTML)//获取到DOM元素中的内容
-                  }
-              }
-          })
+  var vm = new Vue({
+      el: '#root',
+      methods: {
+          handleDivClick: function () {
+              alert(this.$refs.hello.innerHTML)//获取到DOM元素中的内容
+          }
+      }
+  })
   ```
-
+  
   案例：计数器
-
+  
   ```html
-      <div id='root1'>
-          <counter ref='counter1' @change='handleChange'></counter>
-          <counter ref='counter2' @change='handleChange'></counter>
-          <div>{{total}}</div>
-      </div>
+  <div id='root1'>
+      <counter ref='counter1' @change='handleChange'></counter>
+      <counter ref='counter2' @change='handleChange'></counter>
+      <div>{{total}}</div>
+  </div>
   ```
-
+  
   ```javascript
-   		Vue.component('counter',{
-              template:'<div @click="handleClick">{{number}}</div>',
-              data:function(){
-                  return{
-                      number:0
-                  }
-              },
-              methods:{
-                  handleClick:function(){
-                      this.number++
-               // 这里涉及到子组件向父组件传值的内容,用emit触发一个change事件,在父组件进行监听
-                      this.$emit('change')
-                  }
-              }
-          })
-          var vm = new Vue({
-              el:'#root1',
-              data:{
-                  total:0
-              },
-              methods:{
-                  handleChange:function(){
-                      this.total=this.$refs.counter1.number + this.$refs.counter2.number
-                  }
-              }
-          })
+  Vue.component('counter',{
+      template:'<div @click="handleClick">{{number}}</div>',
+      data:function(){
+          return{
+              number:0
+          }
+      },
+      methods:{
+          handleClick:function(){
+              this.number++
+              // 这里涉及到子组件向父组件传值的内容,用emit触发一个change事件,在父组件进行监听
+              this.$emit('change')
+          }
+      }
+  })
+  var vm = new Vue({
+      el:'#root1',
+      data:{
+          total:0
+      },
+      methods:{
+          handleChange:function(){
+              this.total=this.$refs.counter1.number + this.$refs.counter2.number
+          }
+      }
+  })
   ```
-
+  
   
