add box1: 垃圾回收机制

--- a/_posts/浏览器原理相关内容/2021-04-11-12 垃圾回收机制.md
+++ b/_posts/浏览器原理相关内容/2021-04-11-12 垃圾回收机制.md
@@ -13,6 +13,21 @@ typora-root-url: ..
 
 # 12 垃圾回收机制
 
+总结：
+
+- 栈：调用栈的清空方式 - 通过移动 指针 ，将不再需要的数据所在的内存，在后续调用其他函数时，直接覆盖
+- 堆：v8引擎中，基于代际假说 -> 分代式垃圾回收机制，区分「新生代-主垃圾回收机制」「老生代-副垃圾回收机制」
+    - 流程：主、副垃圾回收器有同一套共同流程，①标记活动/非活动对象 -> ②回收非活动对象 -> ③将大量不连续的内存整理（注意：副垃圾回收不产生内存碎片）
+    - 全停顿问题：主副垃圾回收机制都在主线程执行，阻塞 js执行和渲染重绘 -> 后续优化为增量标记算法，后续引入延迟清理、增量式整理、并行标记、并行清理
+    - 副垃圾回收器：区域不大，但很频繁，把新生代区域划成「对象区域」+「空闲区域」
+        - 清理时机：：新对象都加入到对象区域 -> 快满时(时机) -> 执行一次垃圾清理
+        - 垃圾清理过程：标记 -> 存活的对象 **有序地复制** 到空闲区 -> 复制完后，翻转两个区域
+        - 对象晋升策略：经过两次垃圾回收还存活的对象，移动到老生区
+    - 主垃圾回收器：标记-清除 和 标记-清理 两个算法
+        - 早期算法，已废弃：引用计数，在循环引用时，内存泄漏
+        - 标记-清除：没有被引用就被标记为垃圾数据，对内存中的垃圾数据清理（产生大量不连续的内存碎片）
+        - 标记-清理：在 标记-清除 的基础上，让所有活动对象都向一端移动，清理掉边界以外的内存
+
 参考文章：[垃圾回收](https://juejin.cn/post/6844904016325902344)
 
 核心要点记录如下：
@@ -40,8 +55,8 @@ V8 - 32位系统 —> 0.7GB内存
 
 ## 堆 - 垃圾回收机制(JS引擎V8)
 代际假说特点：
--   第一个大部分对象在内存中存在的时间很短，简单来说，就是很多对象一经分配内存，很快就变得不可访问；
--   第二个是不死的对象，会活得更久
+-   **弱分代假说** ：大部分对象在内存中存在的时间很短，简单来说，就是很多对象一经分配内存，很快就变得不可访问 -> 新生代区域主要处理这类 **生命周期较短** 	的对象
+-   **强分代假说** ：是不死的对象，会活得更久 -> 存活时间越久的对象，越有可能继续存活 -> 老生代区域用于存放**生命周期较长** 的对象
 
 垃圾回收算法 <— 有很多种，需要权衡来确定什么时候使用哪一种
 
