add box1: sequelize 在 Nestjs 中的 env 配置 + TS - dayjs 引入但失效问题 + docker-compose 的配置管理 context

--- a/_posts/浏览器原理相关内容/2021-07-01-前端路由的两种模式.md
+++ b/_posts/浏览器原理相关内容/2021-07-01-前端路由的两种模式.md
@@ -26,7 +26,7 @@ typora-root-url: ..
 -	核心方法：『location.hash』
 -	特点：<span style="color:red">**改变视图，但不会向后端发出请求**</span>，服务器不会接收到哈希值的变化
 -	后退：虽然修改路由不会重载页面，但是会创造一条访问历史记录，可后退
--	监听变化：onhashchange
+-	监听变化：window.onhashchange
 -	适用场景：非常适合构建单页面应用 - 在不刷新整个页面的情况下，实现 js 动态改变页面内容的变化和更新
 
 ##### 二、`history` 模式 - 通过 H5 history API 实现路由切换，需要配置服务端响应避免出错
@@ -42,3 +42,22 @@ history.pushState(null, null, '/page1');
 - 特点：客户端监听 popstate 事件，**服务器会完整接收到 URL 请求**，需要服务端响应
 - 后退：基于已有的 `back` 、 `forward` 、`go` 方法，对历史记录栈进行修改
 - 监听变化：`history.popState()` 
+
+```js
+// 1、pushState - 向浏览器历史记录栈中添加一个新的历史记录条目，需要手动调用
+const title = 'New Page';
+const url = '/new-page';
+history.pushState({ page: 'newPage' }, title, url);
+
+// 2、replaceState - 修改当前的历史记录条目，而不是添加新的条目（也不会触发页面刷新
+// 假设当前链接：https://www.mozilla.org/foo.html
+history.replaceState({ foo: "bar" }, '', url);
+
+// 3、popstate - 在浏览器的历史记录发生改变时触发，例如点击前进/后退按钮、go/forward/back，pushState和replaceState不会触发这个事件
+window.addEventListener('popstate', (event) => {
+    if (event.state) {
+        console.log('State:', event.state); // 根据 event.state 更新页面内容
+    }
+});
+```
+
