--- a/_posts/浏览器原理相关内容/2021-04-11-12 垃圾回收机制.md
+++ b/_posts/浏览器原理相关内容/2021-04-11-12 垃圾回收机制.md
@@ -16,7 +16,7 @@ typora-root-url: ..
 总结：
 
 - 栈：调用栈的清空方式 - 通过移动 指针 ，将不再需要的数据所在的内存，在后续调用其他函数时，直接覆盖
-- 堆：v8引擎中，基于代际假说 -> 分代式垃圾回收机制，区分「新生代-主垃圾回收机制」「老生代-副垃圾回收机制」
+- 堆：v8引擎中，基于代际假说 -> 分代式垃圾回收机制，区分「新生代-副垃圾回收机制」「老生代-主垃圾回收机制」
     - 流程：主、副垃圾回收器有同一套共同流程，①标记活动/非活动对象 -> ②回收非活动对象 -> ③将大量不连续的内存整理（注意：副垃圾回收不产生内存碎片）
     - 全停顿问题：主副垃圾回收机制都在主线程执行，阻塞 js执行和渲染重绘 -> 后续优化为增量标记算法，后续引入延迟清理、增量式整理、并行标记、并行清理
     - 副垃圾回收器：区域不大，但很频繁，把新生代区域划成「对象区域」+「空闲区域」
