add box1: Nestjs 核心特性、基本概念、生命周期、获取请求和响应、不同组件的实现和执行顺序

--- a/_posts/Node/2025-1-18-Nestjs 核心特性、基本概念、生命周期、获取请求和响应、不同组件的实现和执行顺序.md
+++ b/_posts/Node/2025-1-18-Nestjs 核心特性、基本概念、生命周期、获取请求和响应、不同组件的实现和执行顺序.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:    Nestjs 学习笔记
+title:    Nestjs 核心特性、基本概念、生命周期、获取请求和响应、不同组件的实现和执行顺序
 subtitle:  
 date:       2024-12-26
 author:     
@@ -14,7 +14,50 @@ typora-root-url: ..
 
 
 
-# Nestjs 学习笔记
+# Nestjs 核心特性、基本概念、生命周期、获取请求和响应、不同组件的实现和执行顺序
+
+总结：
+
+- 核心特性：模块化架构 + 依赖注入DI + 多种协议 HTTP/websocket
+- 基本概念：控制器 controller + 根模块/子模块 module + 服务 provide + 应用程序入口 main.ts
+    - 在模块中配置，将服务注入控制器
+    - 令牌：类是代码的具体实现，令牌是依赖注入的 用于**标识依赖项的唯一标识**，通过令牌请求相应实例
+    - 装饰器：一个表达式，返回一个函数，参数为目标、名称、属性描述符 `createParamDecorator`
+- Nest 生命周期：
+    - ①应用初始化：NestJS 框架启动，解析模块、控制器、provider 等配置信息[通过装饰器@Module @Controller @Injectable 定义的一些元数据，定义了各个组件]，构建依赖[收集、整理组件间的依赖关系]注入容器
+        - 容器：框架内部用于管理组件和依赖关系的一个抽象概念，应用启动时创建
+    - ②依赖解析和实例化：根据配置，解析各组件的依赖关系[深入分析]，根据关系依次实例化 provider、实例化控制器
+    - ③应用启动：所有组件实例化后，应用监听指定端口，正式提供服务
+    - ④请求处理：运行过程中，接收请求，按照中间件-守卫-拦截器-管道-拦截器顺序处理请求，返回响应
+    - ⑤应用关闭：执行关闭操作，销毁各组件实例
+- 不同组件的生命周期：
+    - Provider：应用启动时，NestJS 依赖注入系统解析依赖关系，实例化每个 provider[一般为单例模式]；在应用关闭时，实例被销毁
+    - 模块：NestJS 提供了生命周期钩子  onModuleInit(所有provider实例化后调用) - beforeApplicationShutdown(应用关闭前)-onModuleDestroy(模块销毁时)
+    - 控制器：和 provider 相似，在应用启动时实例化，应用关闭时销毁
+- Nest 有两种响应方式
+    - 标准情况：若是对象/数组，则自动序列化为 JSON；若为基础类型，直接发送，不序列化
+    - 类库特有类型：例如 Express 的 response.status(200).send()
+- Nest 获取请求参数的三种方式
+    - 1、@Req()：Express 的底层，包含请求行、请求头、请求体
+    - 2、@Body、@Guery：开箱即用
+    - 3、@Param：动态路由参数
+- 不同组件的执行顺序：中间件(全局请求的预处理) -> 守卫(权限验证) -> 拦截器（请求阶段-灵活拦截和阻拦） -> 管道(输入参数的转换和验证) -> 控制器处理程序 -> 拦截器（响应阶段）
+    - 中间件：可以访问原生请求和响应，在请求 **进入NestJS 路由系统之前** 进行一些全局处理，例如日志记录、请求验证、请求解析、跨域处理等
+        - 实现：①函数中间件 `logger(req, res, next)`  ②类 `...implements NestMiddleware{use(req, res, next){}}`
+        - 配置：①模块：xxx.module.ts 中 `...implements NestModule{configure(consumer){}}` ②全局：在main.ts中 app.use()
+    - 守卫：主要用于 **权限验证**，决定请求是否可以继续处理
+        - 实现：`...implements CanActivate{canActivate(context){}}` 返回布尔值/可解析为布尔值的Promise
+        - 配置：①控制器/路由方法上 `@UseGuards(类/实例) `②全局 app.useGlobalGuards / useClass
+    - 拦截器(请求阶段)：在请求 **到达控制器处理程序之前** 进行拦截和处理，例如添加额外的请求头、修改请求参数等
+        - 实现：`...implements NestInterceptor{intercept(context, next){}}`
+        - 配置：①控制器/路由方法上 `@UseInterceptors(类/实例) `②全局 app.useGlobalInterceptors / useClass
+    - 管道：对 **控制器处理程序的输入参数** 进行转换和验证，验证路由参数、查询字符串参数、请求体格式等
+        - 实现：①内置管道9个：6个 Parse* 管道 ②自定义管道 - 返回的值完全覆盖原值 `...implements PipeTransform<T, R>{transform(value: T, metadata):R{}}`
+        - 配置：①在控制器的路由方法内，作为参数传入 @Param/Query(‘property’, 多个类/实例) @Body(类/实例) ②在控制器的路由方法上`@UsePipes(类/实例) `②全局 app.useGlobalPipes / useClass
+    - 控制器处理程序：业务代码
+    - 拦截器(响应阶段)：对响应数据进行拦截和处理，例如统一响应格式、日志记录等
+
+
 
 和 Nextjs 区别：
 
@@ -113,8 +156,8 @@ export class ApplicationModule {} // 根模块
 ```js
 // 模块类（子模块） - cats/cats.module.ts
 @Module({
-    controllers: [CatsController], // 创建控制器【必须创建】
-    providers: [CatsService],      // 由 Nest 注入控制器实例化的 Provider
+    controllers: [CatsController], // 创建控制器【必须创建】,用于处理 HTTP 请求
+    providers: [CatsService],      // 由 Nest 注入控制器实例化的 Provider,封装业务逻辑
     imports: [SequelizeModule.forFeature([Time, Routine])],
     							   // 将一个或多个 Sequelize 模型注册到当前模块中
     exports: [CatsService]         // 由本模块提供，并在其他模块中可用的 Provider -> 声明后，每个导入 CatsModule 的模块都可以访问 CatsService 
@@ -303,7 +346,7 @@ export class LoggerMiddleware implements NestMiddleware {
 
 中间件不能在 @Module() 装饰器中列出，因为与 provider 功能和设计目的不同，所以不像 provider 声明形式
 
-##### ①模块配置 - NestModule/configure + MiddlewareConsumer
+##### ①模块配置 - configure
 
 -	必须使用模块类的 `configure()` 方法来设置它们(在模块内有更灵活的应用范围和执行时机)
 
@@ -357,7 +400,9 @@ export class AppModule implements NestModule { // 包含中间件的模块必须
     .forRoutes(CatsController, Cats2Controller)
     ```
 
-##### ②全局中间件：一次性绑定到每个注册路由， 所有请求进行处理
+##### ②全局中间件：app.use
+
+一次性绑定到每个注册路由， 所有请求进行处理
 
 ```js
 // main.ts
