add box1: KOA2 源码

--- a/_posts/浏览器原理相关内容/2021-07-01-前端路由的两种模式.md
+++ b/_posts/浏览器原理相关内容/2021-07-01-前端路由的两种模式.md
@@ -45,18 +45,19 @@ history.pushState(null, null, '/page1');
 
 ```js
 // 1、pushState - 向浏览器历史记录栈中添加一个新的历史记录条目，需要手动调用
-const title = 'New Page';
+const state = { page: 'newPage', id: 1 }; // 状态对象，后续可以 history.state 访问
+const title = 'New Page'; // 新历史标题，一般为 ''
 const url = '/new-page';
-history.pushState({ page: 'newPage' }, title, url);
+history.pushState(state, title, url); // 在现有链接基础上，添加 url 参数
 
 // 2、replaceState - 修改当前的历史记录条目，而不是添加新的条目（也不会触发页面刷新
-// 假设当前链接：https://www.mozilla.org/foo.html
-history.replaceState({ foo: "bar" }, '', url);
+// 假设当前链接：https://www.mozilla.org/foo.html -> 执行完为 /bar2.html
+history.replaceState({ foo: "bar" }, '', "bar2.html");
 
-// 3、popstate - 在浏览器的历史记录发生改变时触发，例如点击前进/后退按钮、go/forward/back，pushState和replaceState不会触发这个事件
+// 3、popstate - 在浏览器的历史记录发生改变时触发，例如点击前进/后退按钮、go/forward/back，注意：pushState 和 replaceState 不会触发这个事件
 window.addEventListener('popstate', (event) => {
-    if (event.state) {
-        console.log('State:', event.state); // 根据 event.state 更新页面内容
+    if (event.state) { // event.state = history.state
+        console.log('State:', event.state); 
     }
 });
 ```
